--- a/code/some_viz.ipynb
+++ b/code/some_viz.ipynb
@@ -556,7 +556,8 @@
     "    plt.legend()\n",
     "    plt.gca().invert_yaxis()\n",
     "    plt.title(f\"TDE {idx}\")\n",
-    "    plt.xlim(130,800)"
+    "    plt.xlim(130,800)\n",
+    "    "
    ]
   },
   {
